# mwa-scratchpad

./: .talismanrc  Cargo.toml  README.md
src/: dump_all_data.rs  dump_context.rs  dump_data.rs  main.rs  serialize.rs  test_pyuvdata.py
