[package]
name = "mwa-scratchpad"
version = "0.1.0"
authors = ["Derwent McElhinney <derwentx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mwalib = { git = "https://github.com/MWATelescope/mwalib", branch="vcs_support" }
# mwalib = { path="../mwalib" }
anyhow = "1.0.*"
structopt = "0.3.*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
fitsio = "0.16.*"
fitsio-sys = "0.3.*"
