[package]
name = "mwa-scratchpad"
version = "0.1.0"
authors = ["Derwent McElhinney <derwentx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mwalib = "0.6.1"
anyhow = "1.0.*"
structopt = "0.3.*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
# polars = "0.11"
fitsio = "0.16.*"
fitsio-sys = "0.3.*"
# bindgen = "0.57.0"
radix_fmt = "1.0.0"
